# pastr

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: pypi-release.md
plans/: data-flow.md  next-steps.md
scripts/: monitor_pr_feedback.sh
src/pastr/: __init__.py  prompt_loader.py
tests/integration/: test_integration_prompt_loader.py
tests/unit/: test_unit_prompt_loader.py
