[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=69", "wheel"]

[project]
dependencies = []
description = "Prompts Are STRings- Simple prompt loading with recursive includes and code replacement."
name = "pastr"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["pastr*"]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--disable-warnings",
]
markers = [
  "integration: marks tests as integration tests",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pyright>=1.1.408",
  "pytest>=8.0.0",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
reportMissingTypeStubs = false
typeCheckingMode = "strict"

[tool.black]
line-length = 100
