[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77", "wheel"]

[project]
dependencies = []
description = "Prompt loading with recursive includes and code substitution."
name = "pastr"
license = "MIT"
authors = [
  { name = "James Stankowicz", email = "jj.stankowicz@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/jjstankowicz/pastr"
Repository = "https://github.com/jjstankowicz/pastr"
Issues = "https://github.com/jjstankowicz/pastr/issues"

[tool.setuptools.packages.find]
include = ["pastr*"]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--disable-warnings",
]
markers = [
  "integration: marks tests as integration tests",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pyright>=1.1.408",
  "pytest>=8.0.0",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
reportMissingTypeStubs = false
typeCheckingMode = "strict"

[tool.black]
line-length = 100
